src/front-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
        - name: vue
          image: wngud1/vue-frontend:1.0.3
          ports:
            - containerPort: 80
---
