src/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-service
spec:
  selector:
    app: vue
  ports:
    - port: 80
      targetPort: 80
